--- a/App/templates/comparesearch.html
+++ b/App/templates/comparesearch.html
@@ -152,6 +152,8 @@
     document.getElementById("myForm").submit();
 
   }
+  show('side', false)
+  document.getElementById('page').style.width='100%'
 
   setTimeout(change,1000);
   </script>
