--- a/App/templates/index1.html
+++ b/App/templates/index1.html
@@ -31,20 +31,20 @@
                         <th>Euro</th>
                       </tr>
                       <tr>
-                        <td>Average House price </td>
-                            <td>{{mortage[1]}}</td>
+                        <td>Average House price (Daft.ie) </td>
+                            <td>{{'{:20,.2f}'.format(mortage[1])}}</td>
                       </tr>
                       <tr>
                         <td>Amount needed(Personal 20%)</td>
-                            <td>{{mortage[3]}}</td>
+                            <td>{{'{:20,.2f}'.format(mortage[3])}}</td>
                       </tr>
                       <tr>
                         <td>Amount to borrow</td>
-                            <td>{{mortage[2]}}</td>
+                            <td>{{'{:20,.2f}'.format(mortage[2])}}</td>
                       </tr>
                       <tr>
                         <td>Monthly Repayments over 30 Year Mortage</td>
-                            <td>{{mortage[0]}}</td>
+                            <td>{{'{:20,.2f}'.format(mortage[0])}}</td>
                       </tr>
                     </table>
                   </div>
