--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!-- This html page is used as the base or boiler plate and implemnets bootstrap homepage
+This page is then implemented or extended to each of the subpages -->
 <html lang="en">
 
 <head>
@@ -53,6 +56,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script>
+    // This code is used to change the view depending on loading or not 
     function show(id, value) {
         document.getElementById(id).style.display = value ? 'block' : 'none';
     }
