--- a/App/templates/error.html
+++ b/App/templates/error.html
@@ -13,7 +13,7 @@
   #page{
     position: fixed; /* or absolute */
     top: 50%;
-    left: 45%;
+    left: 40%;
   }
 
   #loading-wrap{
@@ -77,5 +77,13 @@ function change(){
   show('page', false);
   document.getElementById("myForm").submit();
 }
+</script>
+<<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $('#side').css('visibility','hidden');
+  $('#wrapper').css('padding-left','0px');
+});
+
 </script>
 {% endblock %}
