--- a/App/templates/index1.html
+++ b/App/templates/index1.html
@@ -10,10 +10,10 @@
 
         <!-- Page Heading -->
         <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">
-                    Overview <small>Statistics Overview</small>
-                </h1>
+          <div class="col-lg-12">
+              <h1 class="page-header">
+                Dublin {{area}} <small>Analysis</small>
+              </h1>
                 <ol class="breadcrumb">
                     <li class="active">
                         <i class="fa fa-dashboard"></i> Dashboard
