--- a/App/templates/search.html
+++ b/App/templates/search.html
@@ -134,7 +134,7 @@ span:after{
           <div class="panel panel-default">
               <div class="panel-body">
                 <div id ="trans">
-                  <span>Place information regarding Pre Clamp and Post Clamp information here </span>
+                  <span>Outlier: A value that is far greater than majority </span>
                   <iframe align=left width="100%" height="500" frameborder="0" scrolling="no" src='/static/images/history/H1.html?link=false"'></iframe>
                   </div>
 
