--- a/App/templates/home.html
+++ b/App/templates/home.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Overview <small>Statistics Overview</small>
+                    Dublin<small> Overview</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li class="active">
