--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -91,7 +91,7 @@ This page is then implemented or extended to each of the subpages -->
                 <li>
                   <a href="{{url_for('landing')}}">Home</a></li>
                     <li>
-                    <a href="{{url_for('home')}}"> &nbspCurrent Data &nbsp</a>
+                    <a href="{{url_for('home')}}"> Current Data </a>
                   </li>
                   <li><a href="{{url_for('comparesearch')}}">Compare Areas</a></li>
                   <!--<li><a href="{{url_for('story')}}">Story Board</a></li> -->
